# notutils

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  lint.yml  test.yml
_modules/: index.html
_modules/notutils/: notutils.html
_sources/: api.rst.txt  index.rst.txt
backlog/: index.md
backlog/infrastructure/: 2025-07-13_github-actions-docs.md  2025-07-13_github-actions-pypi-release.md  2025-07-13_github-actions-testing.md  2025-07-15_codecov-rate-limiting.md  2025-07-15_documentation-404-investigation.md  2025-07-15_documentation-deployment.md
cip/: cip0001.md  cip0002.md
docs/source/: conf.py
notutils/: notutils.py
notutils/tests/: __init__.py  notutils_tests.py  test_code_toggle.py  test_display_google_book.py  test_display_iframe_url.py  test_display_plots.py  test_display_prediction.py  test_display_url.py  test_iframe_url.py
